apis: docs for list product by uuid
